syntax = "proto3";

message ScrapingProgressStatus {
    string url = 1;
    string status = 2;
}